11-kubernetes/wcg_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wcg-app-deploy
spec:
  selector:
    matchLabels:
      app: wcg-app
  replicas: 2
  template:
    metadata:
      labels: 
        app: wcg-app
    spec:
      containers:
      - name: wcg-app
        image: ghcr.io/iluaroot/wcg:5ef2e2b3e06ef4e13cff16d7d32b1b5907b6be97
        ports:
        - containerPort: 8888
