11-kubernetes/wcg_service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  wcgport
spec:
  type: ClusterIP
  selector:
    app: wcg-app
  ports:
  - protocol: TCP 
    port:  80
    targetPort:  8888
