11-kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wcg-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wcg-app-local.io
      http:
        paths:
          - path: /wcgapp
            pathType: Prefix
            backend:
              service:
                name: wcgport
                port: 
                  number: 8888
